[package]
name = "nemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot_core = "=0.9.10"
lock_api = "=0.4.12"
libc = "=0.2.163"
once_cell = "=1.20.3"
arc-swap = "1.7.1"
dashmap = "=5.4.0"
crossbeam = "=0.7.3"
